--- a/src/pages/shared/bannerCard.css
+++ b/src/pages/shared/bannerCard.css
@@ -19,23 +19,23 @@
   }
   
   .banner-card .swiper-slide:nth-child(1n) {
-    background-image: url('src/assets/banner-books/book1.png');
+    background-image: url('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1673265868i/60460704.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(2n) {
-    background-image: url('src/assets/banner-books/book2.png');
+    background-image: url('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1676324384i/101144676.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(3n) {
-    background-image: url('src/assets/banner-books/book3.png');
+    background-image: url('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1388716938i/8051458.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(4n) {
-    background-image: url('src/assets/banner-books/book4.png');
+    background-image: url('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1388800064i/9648068.jpg');
   }
   
   .banner-card .swiper-slide:nth-child(5n) {
-    background-image: url('src/assets/banner-books/book5.png');
+    background-image: url('https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1514907620i/18192906.jpg');
   }
 
   
