--- a/src/pages/shared/SingleBook.css
+++ b/src/pages/shared/SingleBook.css
@@ -5,14 +5,16 @@
   }
   
   .img {
-    width: 100%;
-    height: 100%;
-    padding-right:0;
+    width: 120%;
+    height: 120%;
+    padding-left: 2%;
   }
   .text{
     padding-left: 3%;
     padding-right: 20%;
   }
-  
+  .description{
+    font-size: 25px;
+  }
   /* Add any other styling you need for the Banner or other elements */
   
