--- a/src/pages/Home/Banner.css
+++ b/src/pages/Home/Banner.css
@@ -1,5 +1,5 @@
 .banner-background {
-    background-image: url('https://e0.pxfuel.com/wallpapers/676/976/desktop-wallpaper-books-background-open-notebook.jpg');
+    background-image: url('https://images2.alphacoders.com/261/26102.jpg');
     background-size: cover;
     background-position: center;
 }
